--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -89,8 +89,12 @@
         <!--swagger 开始 -->
 
 
-
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
