修改单元测试用例备注

--- a/springboot/src/main/resources/application-dev.yml
+++ b/springboot/src/main/resources/application-dev.yml
@@ -38,6 +38,9 @@ mybatis-plus:
 
 logging:
   level:
-    root: debug
+    root: info
     com.baomidou.mybatisplus.samples.quickstart: debug
     com.wykj.springboot: debug
+
+swagger:
+  enable: true
