--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -23,7 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <swagger.version>2.9.2</swagger.version>
-
+        <open.feign.version>11.8</open.feign.version>
     </properties>
 
     <dependencies>
@@ -132,9 +132,25 @@
 
 
 
-
-
-
+<!--        open-feign 全链路配置-->
+<!--        open-feign 全链路配置-->
+<!--        open-feign 全链路配置-->
+<!--        open-feign 全链路配置-->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+            <version>${open.feign.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-jackson</artifactId>
+            <version>${open.feign.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-slf4j</artifactId>
+            <version>${open.feign.version}</version>
+        </dependency>
 
 <!--分布式锁        -->
 <!--分布式锁        -->
