--- a/springboot/src/main/resources/application-dev.yml
+++ b/springboot/src/main/resources/application-dev.yml
@@ -38,9 +38,10 @@ mybatis-plus:
 
 logging:
   level:
-    root: info
+    root: debug
     com.baomidou.mybatisplus.samples.quickstart: debug
     com.wykj.springboot: debug
+    feign: debug
 
 swagger:
   enable: true
